unpackaged/main/default/objects/OrderApi__Subscription__c/OrderApi__Subscription__c.object-meta.xml
<CustomObject>
    <description>Subscriptions track the activation, expiration, and renewal dates for all Customer Subscriptions.</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Subscription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>