unpackaged/main/default/objects/OrderApi__Subscription__c/fields/CPBase__Hide_In_Portal__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Hide_In_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related subscription will not be visible in the portal.</description>
    <inlineHelpText>When checked, the related subscription will not be visible in the portal.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>