unpackaged/main/default/objects/OrderApi__Subscription__c/fields/CPBase__Subscription_Management_Page_Override__c.field-meta.xml
<CustomField>
    <fullName>CPBase__Subscription_Management_Page_Override__c</fullName>
    <description>Enter the page name to be directed upon clicking the Manage button for the subscription&#39;s tile in the member portal&#39;s profile page.</description>
    <inlineHelpText>Enter the page name to be directed upon clicking the Manage button for the subscription&#39;s tile in the member portal&#39;s profile page.</inlineHelpText>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>