unpackaged/main/default/objects/OrderApi__Subscription__c/fields/DDApi__Is_Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Is_Direct_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated Field ** Checked if the subscription is paid through Direct Debit</description>
    <inlineHelpText>** System Calculated Field ** Checked if the subscription is paid through Direct Debit</inlineHelpText>
    <label>Is Direct Debit</label>
    <type>Checkbox</type>
</CustomField>