unpackaged/main/default/objects/OrderApi__Subscription__c/fields/Legacy_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Subscription_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Subscription ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>