unpackaged/main/default/objects/OrderApi__Subscription__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <formula>OrderApi__Item__r.OrderApi__Display_Name__c</formula>
    <label>Membership Type</label>
    <type>Text</type>
</CustomField>