unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Conditionally Required ** Link to the subscribing Account. Required if the Subscription &quot;Subscribing Entity&quot; is &quot;Account&quot;. Defaults to the same Account assigned to the Sales Order Line that created the Subscription.</description>
    <inlineHelpText>** System Calculated Conditionally Required ** Link to the subscribing Account. Required if the Subscription &quot;Subscribing Entity&quot; is &quot;Account&quot;. Defaults to the same Account assigned to the Sales Order Line that created the Subscription.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>