unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Activated_Date__c</fullName>
    <description>** System Calculated Required Override ** The date the Subscription was activated.</description>
    <inlineHelpText>** System Calculated Required Override ** The date the Subscription was activated.</inlineHelpText>
    <label>Activated Date</label>
    <type>Date</type>
</CustomField>