unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Active_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Active_Assignments__c</fullName>
    <description>** System Calculated ** The count of related Assignments where &quot;Is Active&quot; is checked.</description>
    <inlineHelpText>** System Calculated ** The count of related Assignments where &quot;Is Active&quot; is checked.</inlineHelpText>
    <label>Active Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>