unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Assignment_Badge_Types_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignment_Badge_Types_CSV__c</fullName>
    <description>SYSTEM</description>
    <formula>OrderApi__Item__r.OrderApi__Assignment_Badge_Types_CSV__c</formula>
    <inlineHelpText>SYSTEM</inlineHelpText>
    <label>SYSTEM</label>
    <type>Text</type>
</CustomField>