unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Assignments_Allowed__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignments_Allowed__c</fullName>
    <description>** System Calculated ** Max number of assignments allowed according to related. Rolling up from related Subscription Line&#39;s &quot;Assignments Allowed&quot; filed.</description>
    <inlineHelpText>** System Calculated ** Max number of assignments allowed according to related. Rolling up from related Subscription Line&#39;s &quot;Assignments Allowed&quot; filed.</inlineHelpText>
    <label>Assignments Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>