unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Billing_State__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Billing_State__c</fullName>
    <description>The value of this field will be updated with the Account&#39;s Billing State or Contact&#39;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</description>
    <inlineHelpText>The value of this field will be updated with the Account&#39;s Billing State or Contact&#39;s Mailing State, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>