unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Calculate_Billing_Details__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Calculate_Billing_Details__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&#39;s billing address is used. The contact on the order will populate the billing contact field.</description>
    <inlineHelpText>When checked the system will calculate billing details automatically. If entity is &quot;Contact&quot; the mailing address of the contact is used, otherwise the account&#39;s billing address is used. The contact on the order will populate the billing contact field.</inlineHelpText>
    <label>Calculate Billing Details</label>
    <type>Checkbox</type>
</CustomField>