unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Cancelled_Date__c</fullName>
    <description>** System Calculated Override ** Defaults to the value of today&#39;s date when the Subscription &quot;Is Cancelled&quot; is checked.</description>
    <inlineHelpText>** System Calculated Override ** Defaults to the value of today&#39;s date when the Subscription &quot;Is Cancelled&quot; is checked.</inlineHelpText>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>