unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Cancelled_Reason__c</fullName>
    <description>** Conditionally Required ** Select the most appropriate reason for cancelling the Subscription. Required when a Subscription &quot;Status&quot; equals &quot;Cancelled&quot;.</description>
    <inlineHelpText>** Conditionally Required ** Select the most appropriate reason for cancelling the Subscription. Required when a Subscription &quot;Status&quot; equals &quot;Cancelled&quot;.</inlineHelpText>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declined Renewal</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>