unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Conditionally Required ** Link to the subscribing Contact. Required if the Subscription &quot;Subscribing Entity&quot; is &quot;Contact&quot;. Defaults to the same Contact assigned to the Sales Order Line that created the Subscription.</description>
    <inlineHelpText>** System Calculated Conditionally Required ** Link to the subscribing Contact. Required if the Subscription &quot;Subscribing Entity&quot; is &quot;Contact&quot;. Defaults to the same Contact assigned to the Sales Order Line that created the Subscription.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>