unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Current_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Current_Term_End_Date__c</fullName>
    <description>** System Calculated Required Override ** The end date (Expiration Date) for the current subscription term.</description>
    <inlineHelpText>** System Calculated Required Override ** The end date (Expiration Date) for the current subscription term.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Date</type>
</CustomField>