unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Customer_Link__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Customer_Link__c</fullName>
    <description>** System Calculated ** Link to the subscribing entity record -- either the related Account or Contact.</description>
    <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; OrderApi__Account__r.Id, OrderApi__Account__r.Name), HYPERLINK(&quot;/&quot; &amp; OrderApi__Contact__r.Id, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName))</formula>
    <inlineHelpText>** System Calculated ** Link to the subscribing entity record -- either the related Account or Contact.</inlineHelpText>
    <label>Customer</label>
    <type>Text</type>
</CustomField>