unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Days_To_Lapse__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Days_To_Lapse__c</fullName>
    <description>** System Calculated ** The number of days until the Subscription will expire.</description>
    <inlineHelpText>** System Calculated ** The number of days until the Subscription will expire.</inlineHelpText>
    <label>Days to Lapse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>