unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Optional Subscription description</description>
    <inlineHelpText>Optional Subscription description</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>