unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Entity__c</fullName>
    <description>** System Calculated Required Override ** Select &quot;Account&quot; if the primary subscriber is the linked Account, otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order Line that created the Subscription.</description>
    <inlineHelpText>** System Calculated Required Override ** Select &quot;Account&quot; if the primary subscriber is the linked Account, otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order Line that created the Subscription.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>