unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Expired_Date__c</fullName>
    <description>** System Calculated Required Override ** The date the Subscription expires. Automatically calculated from rules defined on the related Subscription Plan.</description>
    <inlineHelpText>** System Calculated Required Override ** The date the Subscription expires. Automatically calculated from rules defined on the related Subscription Plan.</inlineHelpText>
    <label>Expired Date</label>
    <type>Date</type>
</CustomField>