unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__In_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__In_Grace_Period__c</fullName>
    <formula>OrderApi__Paid_Through_Date__c &lt; TODAY()&amp;&amp; OrderApi__Grace_Period_End_Date__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Grace Period</label>
    <type>Checkbox</type>
</CustomField>