unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will inactivate all related Subscribers and unassign any related benefits.</description>
    <inlineHelpText>When checked, the system will inactivate all related Subscribers and unassign any related benefits.</inlineHelpText>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>