unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the Subscription has expired.</description>
    <inlineHelpText>Checked when the Subscription has expired.</inlineHelpText>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>