unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Is_Pending__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the Subscription is considered &quot;Pending&quot;. Defaults unchecked.</description>
    <inlineHelpText>When checked the Subscription is considered &quot;Pending&quot;. Defaults unchecked.</inlineHelpText>
    <label>Is Pending</label>
    <type>Checkbox</type>
</CustomField>