unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Is_Suspended__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Subscription is suspended. Subscriptions can be suspended to prevent automatic payment via Payment Method on file or to revoke benefits (Badges, etc...) granted by the Subscription Item.</description>
    <inlineHelpText>Checked if the Subscription is suspended. Subscriptions can be suspended to prevent automatic payment via Payment Method on file or to revoke benefits (Badges, etc...) granted by the Subscription Item.</inlineHelpText>
    <label>Is Suspended</label>
    <type>Checkbox</type>
</CustomField>