unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Is_Upgraded__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Upgraded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RESERVED</description>
    <inlineHelpText>RESERVED</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>