unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Last_Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Last_Amendment_Date__c</fullName>
    <description>** System Calculated Override ** The date the Subscription was amended.</description>
    <inlineHelpText>** System Calculated Override ** The date the Subscription was amended.</inlineHelpText>
    <label>Last Amendment Date</label>
    <type>Date</type>
</CustomField>