unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Last_Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Last_Renewed_Date__c</fullName>
    <description>** System Calculated Override ** The date the Subscription was last renewed.</description>
    <inlineHelpText>** System Calculated Override ** The date the Subscription was last renewed.</inlineHelpText>
    <label>Last Renewed Date</label>
    <type>Date</type>
</CustomField>