unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Last_System_Run__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Last_System_Run__c</fullName>
    <description>** SYSTEM FIELD DO NOT UPDATE **</description>
    <inlineHelpText>** SYSTEM FIELD DO NOT UPDATE **</inlineHelpText>
    <label>Last System Run</label>
    <type>Date</type>
</CustomField>