unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Line_Count__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Line_Count__c</fullName>
    <description>** System Calculated ** Count of related Subscription Lines.</description>
    <inlineHelpText>** System Calculated ** Count of related Subscription Lines.</inlineHelpText>
    <label>Line Count</label>
    <summaryForeignKey>OrderApi__Subscription_Line__c.OrderApi__Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>