unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Maximum_Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Maximum_Number_of_Assignments__c</fullName>
    <description>** System Calculated Required Override ** The maximum number of &quot;Assignments&quot; aka &quot;Subscribers&quot; allowed for &quot;Assignment&quot; against the Subscription is derived from the related &quot;Subscription&quot; Item &quot;Maximum Number of Assignments&quot; field.</description>
    <inlineHelpText>** System Calculated Required Override ** The maximum number of &quot;Assignments&quot; aka &quot;Subscribers&quot; allowed for &quot;Assignment&quot; against the Subscription is derived from the related &quot;Subscription&quot; Item &quot;Maximum Number of Assignments&quot; field.</inlineHelpText>
    <label>zDEPRACATED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>