unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Next_Scheduled_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Next_Scheduled_Payment_Date__c</fullName>
    <description>System Calculated ** Defines the next present scheduled payment date (renewal or installment) as defined by a scheduled payment related to the subscription.</description>
    <inlineHelpText>System Calculated ** Defines the next present scheduled payment date (renewal or installment) as defined by a scheduled payment related to the subscription.</inlineHelpText>
    <label>Next Scheduled Payment Date</label>
    <summarizedField>OrderApi__Renewal__c.OrderApi__Next_Scheduled_Payment_Date__c</summarizedField>
    <summaryFilterItems>
        <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>