unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Next_Scheduled_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Next_Scheduled_Renewal_Date__c</fullName>
    <description>** System Calculated Override ** The date the next renewal is scheduled to be processed for the Subscription, defaults to the Current Term End Date. Valid only for Subscriptions where Auto Renew is enabled and a valid payment method is linked.</description>
    <inlineHelpText>** System Calculated Override ** The date the next renewal is scheduled to be processed for the Subscription, defaults to the Current Term End Date. Valid only for Subscriptions where Auto Renew is enabled and a valid payment method is linked.</inlineHelpText>
    <label>Next Scheduled Renewal Date</label>
    <type>Date</type>
</CustomField>