unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Paid_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Paid_Through_Date__c</fullName>
    <description>Defines the last active date of the subscription including all subscription renewals.</description>
    <inlineHelpText>Defines the last active date of the subscription including all subscription renewals.</inlineHelpText>
    <label>Paid Through Date</label>
    <type>Date</type>
</CustomField>