unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Link to the related Payment Method on file for the subscribing customer - used for automatic payment charges. Required if the parent Subscription Plan &quot;Require Payment Method&quot; field is checked.</description>
    <inlineHelpText>** Conditionally Required ** Link to the related Payment Method on file for the subscribing customer - used for automatic payment charges. Required if the parent Subscription Plan &quot;Require Payment Method&quot; field is checked.</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>OrderApi__Payment_Method__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>