unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Renewal_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Renewal_Override__c</fullName>
    <description>Enter the URL to be directed upon clicking the renew button for subscriptions on the manage subscription page.</description>
    <inlineHelpText>Enter the URL to be directed upon clicking the renew button for subscriptions on the manage subscription page.</inlineHelpText>
    <label>RESERVED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>