unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Renewals__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Renewals__c</fullName>
    <description>** System Calculated ** Rollup Summary field, counts number of Renewals.</description>
    <inlineHelpText>** System Calculated ** Rollup Summary field, counts number of Renewals.</inlineHelpText>
    <label>Terms</label>
    <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>