unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** The source Sales Order Line that created the Subscription.</description>
    <inlineHelpText>** System Calculated ** The source Sales Order Line that created the Subscription.</inlineHelpText>
    <label>Sales Order Line (Source)</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>