unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Street__c</fullName>
    <description>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Shipping Street when Calculate Shipping Details is checked.</description>
    <inlineHelpText>**System Calculated/Conditional** Shipping Street derives from the Contact Mailing Street or the Account Shipping Street when Calculate Shipping Details is checked.</inlineHelpText>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>