unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Status__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Status__c</fullName>
    <description>** System Calculated Required ** The status of the Subscription.</description>
    <inlineHelpText>** System Calculated Required ** The status of the Subscription.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>