unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Subscription_Dues_Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Dues_Total__c</fullName>
    <description>** System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines.</description>
    <inlineHelpText>** System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines.</inlineHelpText>
    <label>Subscription Dues Total</label>
    <summarizedField>OrderApi__Subscription_Line__c.OrderApi__Total__c</summarizedField>
    <summaryForeignKey>OrderApi__Subscription_Line__c.OrderApi__Subscription__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>