unpackaged/main/default/objects/OrderApi__Subscription__c/fields/OrderApi__Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Plan</label>
    <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>